# AFMulator_RigidBody

./: AFMulator.cbp  AFMulator.layout  CMakeLists.txt  OUT  README  README.md  clear  main.cpp  makefile  program.x  test
InputData/: WaterAugmented.bas  confFilesCommander  dial.contmenu  moleculeParams3  scanningParams3  surfParams  testA.contmenu  tipParameters  tipParams3
OutputData/: void.txt
WorkDir/: makeScanScript.py
WorkDir/InputData/: confFilesCommander
WorkDir/OutputData/: pixelData.out  replayConfigFile  zstepData.out
WorkDir/inputs/: atomTypes.ini  molecules.ini  scan.ini  tipParams.ini
include/: BUTTONS_README  appModes.h  buttons.cpp  buttons.h  dataManagement.h  drawUtils.h  fileManagement.h  forceField.h
include/IO/: fileManager.h  mainAccessories.h  readWriteProcedures.h  terminalAccessories.h
include/app/: appMode.h  appModeNoTip.h  (+11 more)
inputs/: geometry.ini  molecules.ini  scan.ini  tip.ini
py/: plotgrid.py
src/: CMakeLists.txt  main.cpp
src/IO/: fileWrapper.h  terminalAccessories.h
src/IO/dataWarper/: dataWrapper.h  quaterDataWrapper.h  scalarDataWrapper.h  vectorDataManager.h  vectorDataWrapper.h
src/app/: appMode.h  appModeFileScript.h  appModeNoTip.h  appModeRaster.h  appModeRelax.h  appModeReplay.h  appModeTipMol.h  appModeTipMolOne.h  appModeView.h  scanProcedures.h  settingProcedures.h
src/core/: PhysicalSystemEditor.h  atomTypes.h  moleculeType.h  physicalSystem.h  tipProcedures.h
src/graphics/: BUTTONS_README.md  Screen.h  alphabet.h  button.h  contextMenu.h  graphicalInterface.h
src/math/: optimizerDerivs.h
(+27 files in other folders)
